# QSqliteDemo

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright
src/: CMakeLists.txt  main.cpp
src/model/: package.proto
src/resource/: package.json  resource.qrc
src/util/: runner.h  singleton.h
